<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stocks.cluelesscloset.Activities.NewClothesActivity">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <android.support.v7.widget.CardView android:layout_width="match_parent"
                                                android:layout_height="wrap_content">

                <EditText android:id="@+id/new_apparel_box"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="8dp"
                          android:drawablePadding="8dp"
                          android:drawableStart="@drawable/ic_search_black"
                          android:hint="@string/new_apparel_hint"/>

            </android.support.v7.widget.CardView>

            <TextView style="@style/mega_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/apparel_category"/>

            <Spinner android:id="@+id/apparel_category_box"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:layout_marginTop="16dp">

            </Spinner>

            <TextView style="@style/mega_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/warmth_level"/>

            <SeekBar android:id="@+id/warmth_bar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:max="10"/>

            <CheckBox android:id="@+id/water_resistant_box"
                      android:layout_marginBottom="16dp"
                android:text="@string/water_resistant" android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>

            <TextView style="@style/mega_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/photo_snap"/>

            <ImageButton android:id="@+id/photo_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:padding="16dp"
                         android:src="@drawable/ic_camera_dark"/>

            <ImageView android:id="@+id/photo"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="end"
                      android:orientation="horizontal">

            <Button android:id="@+id/cancel_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button_text"/>

            <Button android:id="@+id/save_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_button_text"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
