<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context="com.stocks.cluelesscloset.Activities.OutfitActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="3"
                  android:orientation="vertical">

        <TextView style="@style/mini_text"
                  android:id="@+id/accessory_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/accessory"/>

        <ImageView android:id="@+id/accessories_image"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"
                   tools:ignore="NestedWeights"/>

        <TextView style="@style/mini_text"
                  android:id="@+id/top_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/top"/>

        <ImageView android:id="@+id/top_image"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"/>

        <TextView style="@style/mini_text"
                  android:id="@+id/bottom_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/bottom"/>

        <ImageView android:id="@+id/bottom_image"
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:baselineAligned="false"
                  android:gravity="center|top"
                  android:orientation="horizontal">

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_clothes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_add"
                android:text="@string/register"
                app:rippleColor="@color/colorPrimaryDark"/>

            <TextView style="@style/mini_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/add_clothes"/>

        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/gib_new_outfit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_clothes"
                android:text="@string/register"
                app:rippleColor="@color/colorPrimaryDark"/>

            <TextView style="@style/mini_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/new_outfit"/>
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/search_outfit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_search"
                android:text="@string/register"
                app:rippleColor="@color/colorPrimaryDark"/>

            <TextView style="@style/mini_text"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/search"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
