<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="64dp"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.stocks.cluelesscloset.Activities.LoginActivity">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:orientation="horizontal">
            <TextView
                style="@style/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/app_name"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:src="@mipmap/ic_launcher"/>

        </LinearLayout>

        <TextView
            android:id="@+id/auth_title_view"
            style="@style/mega_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_email_black"
                android:gravity="center_vertical"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_lock_black"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/register_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_face"
                    android:gravity="center_vertical"
                    android:hint="@string/first_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_pencil"
                    android:gravity="center_vertical"
                    android:hint="@string/last_name"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_continue"
            android:text="@string/register"
            app:rippleColor="@color/colorPrimaryDark"/>

        <Switch
            android:id="@+id/auth_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"/>

        <TextView
            android:id="@+id/switch_text"
            style="@style/mini_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>


    </LinearLayout>
</ScrollView>
