<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context="com.stocks.cluelesscloset.Activities.AddClothesActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <android.support.v7.widget.CardView android:id="@+id/accessories_card"
                                            style="@style/ripply_card"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <ImageView android:id="@+id/accessories_arrow"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:padding="8dp"
                           android:src="@drawable/ic_dropdown"/>

                <TextView style="@style/mini_text"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:text="@string/accessories_display"/>

                <ImageView android:id="@+id/add_accessories"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="16dp"
                           android:src="@drawable/ic_add_accent"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView android:id="@+id/accessories_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:visibility="gone">


        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.CardView android:id="@+id/tops_card"
                                            style="@style/ripply_card"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <ImageView android:id="@+id/tops_arrow"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:padding="8dp"
                           android:src="@drawable/ic_dropdown"/>

                <TextView style="@style/mini_text"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:text="@string/tops_display"/>

                <ImageView android:id="@+id/add_tops"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="16dp"
                           android:src="@drawable/ic_add_accent"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView android:id="@+id/tops_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:visibility="gone">


        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.CardView android:id="@+id/bottoms_card"
                                            style="@style/ripply_card"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <ImageView android:id="@+id/bottoms_arrow"
                    android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:padding="8dp"
                           android:src="@drawable/ic_dropdown"/>

                <TextView style="@style/mini_text"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:text="@string/bottoms_display"/>

                <ImageView android:id="@+id/add_bottoms"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:padding="16dp"
                           android:src="@drawable/ic_add_accent"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView android:id="@+id/bottoms_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:visibility="gone">


        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</ScrollView>
